Wrap slow example into donttest

--- a/nuweb/CBData.tex
+++ b/nuweb/CBData.tex
@@ -36,7 +36,7 @@ and implement fitting of a variety of existing models and trend tests.
 \maketitle
 
 \begin{flushleft} \small\label{scrap1}\raggedright\small
-\NWtarget{nuweb1}{} \verb@"../R/CorrBin-package.R"@\nobreak\ {\footnotesize {1}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CorrBin-package.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -81,7 +81,7 @@ and implement fitting of a variety of existing models and trend tests.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb9b}{9b}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -104,7 +104,7 @@ is the input data frame; \texttt{trt}, \texttt{clustersize}, \texttt{nresp} and
 variable in \texttt{x} (\texttt{freq} can also be NULL, in which case it is 
 assumed that each combination has frequency 1).
 \begin{flushleft} \small\label{scrap2}\raggedright\small
-\NWtarget{nuweb2a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {2a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -146,14 +146,14 @@ assumed that each combination has frequency 1).
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap3}\raggedright\small
-\NWtarget{nuweb2b}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {2b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -191,7 +191,7 @@ assumed that each combination has frequency 1).
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 \item \NWtxtIdentsDefed\nobreak\  \verb@CBdata.data.frame@\nobreak\ \NWtxtIdentsNotUsed.
 \item{}
 \end{list}
@@ -204,7 +204,7 @@ give the number of times the given combination occurs in the data.
 
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap4}\raggedright\small
-\NWtarget{nuweb3a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {3a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -232,14 +232,14 @@ give the number of times the given combination occurs in the data.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 
 \item{}
 \end{list}
 \end{minipage}\vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap5}\raggedright\small
-\NWtarget{nuweb3b}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {3b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -257,7 +257,7 @@ give the number of times the given combination occurs in the data.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 \item \NWtxtIdentsDefed\nobreak\  \verb@read.CBdata@\nobreak\ \NWtxtIdentsNotUsed.
 \item{}
 \end{list}
@@ -269,7 +269,7 @@ have a \texttt{CMData} class anymore.
 
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap6}\raggedright\small
-\NWtarget{nuweb4}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {4}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -297,7 +297,7 @@ have a \texttt{CMData} class anymore.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 
 \item{}
 \end{list}
@@ -305,7 +305,7 @@ have a \texttt{CMData} class anymore.
 \end{flushleft}
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap7}\raggedright\small
-\NWtarget{nuweb5a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {5a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -334,7 +334,7 @@ have a \texttt{CMData} class anymore.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 \item \NWtxtIdentsDefed\nobreak\  \verb@[.CBData@\nobreak\ \NWtxtIdentsNotUsed.
 \item{}
 \end{list}
@@ -345,7 +345,7 @@ each row is one observation (instead of one cluster). A new `ID' variable is add
 to indicate clusters. It is first defined as a generic function to allow generalization.
 
 \begin{flushleft} \small\label{scrap8}\raggedright\small
-\NWtarget{nuweb5b}{} \verb@"../R/aaa-generics.R"@\nobreak\ {\footnotesize {5b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/aaa-generics.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -382,13 +382,13 @@ to indicate clusters. It is first defined as a generic function to allow general
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtIdentsUsed\nobreak\  \verb@unwrap.CBData@\nobreak\ \NWlink{nuweb6a}{6a}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@unwrap.CBData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap9}\raggedright\small
-\NWtarget{nuweb6a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {6a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -417,8 +417,8 @@ to indicate clusters. It is first defined as a generic function to allow general
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@unwrap.CBData@\nobreak\ \NWlink{nuweb5b}{5b}\NWlink{nuweb8}{, 8}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@unwrap.CBData@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -427,7 +427,7 @@ to indicate clusters. It is first defined as a generic function to allow general
 The RS-adjusted CA test for trend is based on design-effect adjustment.
 
 \begin{flushleft} \small\label{scrap10}\raggedright\small
-\NWtarget{nuweb6b}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {6b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -468,14 +468,14 @@ The RS-adjusted CA test for trend is based on design-effect adjustment.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@GEE.trend.test@\nobreak\ \NWlink{nuweb8}{8}, \verb@RS.trend.test@\nobreak\ \NWlink{nuweb7a}{7a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@GEE.trend.test@\nobreak\ \NWlink{nuweb?}{?}, \verb@RS.trend.test@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap11}\raggedright\small
-\NWtarget{nuweb7a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {7a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -506,8 +506,8 @@ The RS-adjusted CA test for trend is based on design-effect adjustment.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@RS.trend.test@\nobreak\ \NWlink{nuweb6b}{6b}\NWlink{nuweb7b}{, 7b}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@RS.trend.test@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -515,7 +515,7 @@ The RS-adjusted CA test for trend is based on design-effect adjustment.
 \section{GEE based test}
 
 \begin{flushleft} \small\label{scrap12}\raggedright\small
-\NWtarget{nuweb7b}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {7b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -558,14 +558,14 @@ The RS-adjusted CA test for trend is based on design-effect adjustment.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@GEE.trend.test@\nobreak\ \NWlink{nuweb8}{8}, \verb@RS.trend.test@\nobreak\ \NWlink{nuweb7a}{7a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@GEE.trend.test@\nobreak\ \NWlink{nuweb?}{?}, \verb@RS.trend.test@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap13}\raggedright\small
-\NWtarget{nuweb8}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {8}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -592,8 +592,8 @@ The RS-adjusted CA test for trend is based on design-effect adjustment.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@GEE.trend.test@\nobreak\ \NWlink{nuweb6b}{6b}\NWlink{nuweb7b}{, 7b}.\item \NWtxtIdentsUsed\nobreak\  \verb@unwrap.CBData@\nobreak\ \NWlink{nuweb6a}{6a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@GEE.trend.test@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.\item \NWtxtIdentsUsed\nobreak\  \verb@unwrap.CBData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -609,7 +609,7 @@ number of responses given the two parameters \texttt{p} and \texttt{rho}, and th
 cluster size \texttt{n}.
 
 \begin{flushleft} \small\label{scrap14}\raggedright\small
-\NWtarget{nuweb9a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {9a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -659,14 +659,14 @@ cluster size \texttt{n}.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb9b}{9b}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap15}\raggedright\small
-\NWtarget{nuweb9b}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {9b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -696,8 +696,8 @@ cluster size \texttt{n}.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb1}{1}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb11a}{, 11a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -708,7 +708,7 @@ beta-binomial and q-power -- for generating correlated binary data. Either
 can be used in \texttt{ran.CBData}.
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap16}\raggedright\small
-\NWtarget{nuweb11a}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {11a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -762,14 +762,14 @@ can be used in \texttt{ran.CBData}.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb9b}{9b}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CBData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \end{minipage}\vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap17}\raggedright\small
-\NWtarget{nuweb11b}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {11b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -785,7 +785,7 @@ can be used in \texttt{ran.CBData}.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 
 \item{}
 \end{list}
@@ -793,7 +793,7 @@ can be used in \texttt{ran.CBData}.
 \end{flushleft}
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap18}\raggedright\small
-\NWtarget{nuweb12}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {12}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CBData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -815,7 +815,7 @@ can be used in \texttt{ran.CBData}.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb2a}{2a}\NWlink{nuweb2b}{b}\NWlink{nuweb3a}{, 3a}\NWlink{nuweb3b}{b}\NWlink{nuweb4}{, 4}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb6a}{, 6a}\NWlink{nuweb6b}{b}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb8}{, 8}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb11a}{, 11a}\NWlink{nuweb11b}{b}\NWlink{nuweb12}{, 12}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 
 \item{}
 \end{list}
