--- a/nuweb/CMData.tex
+++ b/nuweb/CMData.tex
@@ -59,7 +59,7 @@ variable in \texttt{x}. \texttt{nresp} should be a vector of variable names or c
 assumed that each combination has frequency 1.
 
 \begin{flushleft} \small\label{scrap1}\raggedright\small
-\NWtarget{nuweb1}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {1}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -106,14 +106,14 @@ assumed that each combination has frequency 1.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@read.CMData@\nobreak\ \NWlink{nuweb4a}{4a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@read.CMData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap2}\raggedright\small
-\NWtarget{nuweb2}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {2}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -163,7 +163,7 @@ assumed that each combination has frequency 1.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 \item \NWtxtIdentsDefed\nobreak\  \verb@CMdata.data.frame@\nobreak\ \NWtxtIdentsNotUsed.
 \item{}
 \end{list}
@@ -179,7 +179,7 @@ give the number of times the given combination occurs in the data.
 
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap3}\raggedright\small
-\NWtarget{nuweb3}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {3}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -211,7 +211,7 @@ give the number of times the given combination occurs in the data.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 
 \item{}
 \end{list}
@@ -219,7 +219,7 @@ give the number of times the given combination occurs in the data.
 \end{flushleft}
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap4}\raggedright\small
-\NWtarget{nuweb4a}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {4a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -239,8 +239,8 @@ give the number of times the given combination occurs in the data.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@read.CMData@\nobreak\ \NWlink{nuweb1}{1}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@read.CMData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \end{minipage}\vspace{4ex}
@@ -251,7 +251,7 @@ have a \texttt{CMData} class anymore.
 
 \begin{flushleft} \small
 \begin{minipage}{\linewidth}\label{scrap5}\raggedright\small
-\NWtarget{nuweb4b}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {4b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -281,7 +281,7 @@ have a \texttt{CMData} class anymore.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
 \item \NWtxtIdentsDefed\nobreak\  \verb@[.CMData@\nobreak\ \NWtxtIdentsNotUsed.
 \item{}
 \end{list}
@@ -292,7 +292,7 @@ each row is one observation (instead of one cluster). A new `ID' variable is add
 to indicate clusters. 
 
 \begin{flushleft} \small\label{scrap6}\raggedright\small
-\NWtarget{nuweb4c}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {4c}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -318,14 +318,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@unwrap.CMData@\nobreak\ \NWlink{nuweb5a}{5a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@unwrap.CMData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap7}\raggedright\small
-\NWtarget{nuweb5a}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {5a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -361,8 +361,8 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@unwrap.CMData@\nobreak\ \NWlink{nuweb4c}{4c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@unwrap.CMData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -370,7 +370,7 @@ to indicate clusters.
 \section{Generating CMData objects}
 
 \begin{flushleft} \small\label{scrap8}\raggedright\small
-\NWtarget{nuweb5b}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {5b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -431,14 +431,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@mg.DirMult@\nobreak\ \NWlink{nuweb8b}{8b}, \verb@mg.LogitNorm@\nobreak\ \NWlink{nuweb9a}{9a}, \verb@mg.MixMult@\nobreak\ \NWlink{nuweb9c}{9c}, \verb@mg.Resample@\nobreak\ \NWlink{nuweb7c}{7c}, \verb@ran.CMData@\nobreak\ \NWlink{nuweb6}{6}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@mg.DirMult@\nobreak\ \NWlink{nuweb?}{?}, \verb@mg.LogitNorm@\nobreak\ \NWlink{nuweb?}{?}, \verb@mg.MixMult@\nobreak\ \NWlink{nuweb?}{?}, \verb@mg.Resample@\nobreak\ \NWlink{nuweb?}{?}, \verb@ran.CMData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap9}\raggedright\small
-\NWtarget{nuweb6}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {6}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -465,14 +465,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@ran.CMData@\nobreak\ \NWlink{nuweb5b}{5b}\NWlink{nuweb7a}{, 7a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@ran.CMData@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap10}\raggedright\small
-\NWtarget{nuweb7a}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {7a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -490,8 +490,8 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CMData@\nobreak\ \NWlink{nuweb6}{6}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@ran.CMData@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -499,7 +499,7 @@ to indicate clusters.
 \subsection{Resampling}
 
 \begin{flushleft} \small\label{scrap11}\raggedright\small
-\NWtarget{nuweb7b}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {7b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -514,14 +514,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@mg.Resample@\nobreak\ \NWlink{nuweb7c}{7c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@mg.Resample@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap12}\raggedright\small
-\NWtarget{nuweb7c}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {7c}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -545,15 +545,15 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@mg.Resample@\nobreak\ \NWlink{nuweb5b}{5b}\NWlink{nuweb7b}{, 7b}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@mg.Resample@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \subsection{Dirichlet-Multinomial distribution}
 \begin{flushleft} \small\label{scrap13}\raggedright\small
-\NWtarget{nuweb8a}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {8a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -569,14 +569,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@mg.DirMult@\nobreak\ \NWlink{nuweb8b}{8b}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@mg.DirMult@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap14}\raggedright\small
-\NWtarget{nuweb8b}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {8b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -593,8 +593,8 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@mg.DirMult@\nobreak\ \NWlink{nuweb5b}{5b}\NWlink{nuweb8a}{, 8a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@mg.DirMult@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -602,7 +602,7 @@ to indicate clusters.
 \subsection{Logit-Normal multinomial distribution}
 
 \begin{flushleft} \small\label{scrap15}\raggedright\small
-\NWtarget{nuweb8c}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {8c}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -619,14 +619,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@mg.LogitNorm@\nobreak\ \NWlink{nuweb9a}{9a}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@mg.LogitNorm@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap16}\raggedright\small
-\NWtarget{nuweb9a}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {9a}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -646,8 +646,8 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@mg.LogitNorm@\nobreak\ \NWlink{nuweb5b}{5b}\NWlink{nuweb8c}{, 8c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@mg.LogitNorm@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
@@ -655,7 +655,7 @@ to indicate clusters.
 \subsection{Discrete mixture of multinomials distribution}
 
 \begin{flushleft} \small\label{scrap17}\raggedright\small
-\NWtarget{nuweb9b}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {9b}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -672,14 +672,14 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsUsed\nobreak\  \verb@mg.MixMult@\nobreak\ \NWlink{nuweb9c}{9c}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsUsed\nobreak\  \verb@mg.MixMult@\nobreak\ \NWlink{nuweb?}{?}.
 \item{}
 \end{list}
 \vspace{4ex}
 \end{flushleft}
 \begin{flushleft} \small\label{scrap18}\raggedright\small
-\NWtarget{nuweb9c}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {9c}}$\equiv$
+\NWtarget{nuweb?}{} \verb@"../R/CMData.R"@\nobreak\ {\footnotesize {?}}$\equiv$
 \vspace{-1ex}
 \begin{list}{}{} \item
 \mbox{}\verb@@\\
@@ -711,8 +711,8 @@ to indicate clusters.
 \vspace{-1.5ex}
 \footnotesize
 \begin{list}{}{\setlength{\itemsep}{-\parsep}\setlength{\itemindent}{-\leftmargin}}
-\item \NWtxtFileDefBy\ \NWlink{nuweb1}{1}\NWlink{nuweb2}{, 2}\NWlink{nuweb3}{, 3}\NWlink{nuweb4a}{, 4a}\NWlink{nuweb4b}{b}\NWlink{nuweb4c}{c}\NWlink{nuweb5a}{, 5a}\NWlink{nuweb5b}{b}\NWlink{nuweb6}{, 6}\NWlink{nuweb7a}{, 7a}\NWlink{nuweb7b}{b}\NWlink{nuweb7c}{c}\NWlink{nuweb8a}{, 8a}\NWlink{nuweb8b}{b}\NWlink{nuweb8c}{c}\NWlink{nuweb9a}{, 9a}\NWlink{nuweb9b}{b}\NWlink{nuweb9c}{c}.
-\item \NWtxtIdentsDefed\nobreak\  \verb@mg.MixMult@\nobreak\ \NWlink{nuweb5b}{5b}\NWlink{nuweb9b}{, 9b}.
+\item \NWtxtFileDefBy\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}\NWlink{nuweb?}{, ?}.
+\item \NWtxtIdentsDefed\nobreak\  \verb@mg.MixMult@\nobreak\ \NWlink{nuweb?}{?}\NWlink{nuweb?}{, ?}.
 \item{}
 \end{list}
 \vspace{4ex}
